--- a/components/tab-bar/style/index.less
+++ b/components/tab-bar/style/index.less
@@ -15,6 +15,7 @@
     display: flex;
     transition: bottom 0.2s;
     .box-sizing();
+    z-index: 100;
     &&-hidden {
       bottom: -@tab-bar-height;
     }
